[tool.poetry]
name = "apipdf"
version = "0.1.0"
description = "API para manejar PDFs e imágenes"
authors = ["Luis Martinez <luis@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.1.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
